# Dr-s-Saintvision

./: CLAUDE.md
.claude/: settings.local.json
dr-saintvision/: .env.example  .gitignore  README.md  check_db.py  config.json  config.py  download_models.bat  download_models.py  main.py  pyproject.toml  requirements.txt  run.bat  run.sh  run_research.py  setup.bat  setup.sh  simple_run.py  test_live_system.py  test_system.py
dr-saintvision/backend/: __init__.py  api.py  database.py  evaluation.py
dr-saintvision/frontend/: __init__.py  app.py
dr-saintvision/knowledge_base/: knowledge.json
dr-saintvision/learning_data/: learning_20251125_181422.json  learning_20251125_182812.json  learning_20251125_182937.json  learning_20251125_185121.json  learning_20251125_185517.json
dr-saintvision/modelfiles/: Modelfile.reasoning  Modelfile.search  Modelfile.synthesis
dr-saintvision/models/: __init__.py  base_agent.py  debate_manager.py  reasoning_agent.py  search_agent.py  synthesis_agent.py
dr-saintvision/research/: __init__.py  algorithms.py  analysis.py  benchmarks.py  comparison.py  experiments.py
dr-saintvision/tests/: __init__.py  test_agents.py  test_api.py  test_utils.py
dr-saintvision/utils/: __init__.py  metrics.py  prompts.py  web_search.py
